--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 <body>
 	<header>
-		<h1>Twimba</h1>
+		<h1>Twidder</h1>
 	</header>
 	<main>
 		<div class="tweet-input-area">
-			<img src="images/scrimbalogo.png" class="profile-pic">
+			<img src="images/Kevin.jpg" class="profile-pic">
             <textarea 
                 id="tweet-input" 
-                placeholder="What's happening?"></textarea>
+                placeholder="What's on your mind?"></textarea>
 		</div>
-		<button id="tweet-btn">Tweet</button>
+		<button id="tweet-btn">Tweed</button>
 		<div class="feed" id="feed"></div>
 	</main>
 	<script type='module' src="index.js"></script>
